# claude-finance-mcp

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  server.py
banks/: __init__.py  bofa.py  capitalone.py  shared.py  sofi.py
scripts/: manual_login.py
src/: index.ts  types.ts
src/banks/: aggregate-tools.ts  bofa.ts  capitalone.ts  shared.ts  sofi.ts
src/banks/scrapers/: bofa-read.ts  capitalone-read.ts  index.ts  sofi-read.ts
src/paypal/: client.ts  tools.ts
src/plaid/: client.ts  tools.ts
src/scripts/: manual-login.ts  setup-bank.ts  setup-paypal.ts  setup-plaid.ts
